# Kisisel_Asistan

./: .envexample  README.md  app.py  app_ui.py  config.py  pyproject.toml  requirements.txt  storage.py
mira_assistant/api/: http.py
mira_assistant/core/: actions.py  advisor.py  intent.py  llm_intent.py  parser_tr.py  scheduler.py  storage.py  summarizer.py  vector_store.py
mira_assistant/io/: ingest.py  stt.py  tts.py
mira_assistant/ui/: main_window.py  notifications.py  tray.py
scripts/: check_dependency_updates.py  check_requirements.ps1  post_install.ps1
tests/: conftest.py  test_acceptance.py  test_parser_tr.py
